--- a/resume_proj/resume_app/templates/postlogin.html
+++ b/resume_proj/resume_app/templates/postlogin.html
@@ -22,13 +22,24 @@
     <title>Document</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script>
+        $(document).ready(function() {
+            $('#changes').hide();
+
+            $('#edit_info').click(function(){
+                $('#changes').toggle();
+            })
+        })
+
+
+    </script>
 </head>
 
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome {{user.first_name}} {{user.last_name}}!</a>
+            <a class="navbar-brand" href="#">Welcome back, {{user.first_name}} {{user.last_name}}!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,20 +53,21 @@
         </div>
     </nav><!-- /NAVBAR -->
     <br>
-    <div class="container">
-        <div class="center">
-            <h1>Getting Started</h1>
-            <p>You will be filling out 6 pages worth of resume information, including uploading a profile picture.</p>
-            <p>Filling out a resume can be a daunting task so do yourself a favor and just get it done.</p>
-            <p>This website is meant to give you a centralized location to store and update your resume. From here 
-                you can edit, share, and/or print your resume.</p>
-            <h3>Good luck!</h3>
-            <br>
-            <div id="obj_button">
-                <a href="/objective/{{user.id}}" role="button" class="btn btn-lg btn-info ml-2 text-white">Objective</a>
-            </div>
+    <div class="wrapper">
+        <div id="view_button">
+            <a class="btn btn-primary" href="/templates" role="button">View Template</a>
+        </div>
+        <br>
+        <div id="edit_button">
+            <a class="btn btn-primary" id="edit_info" href="#" role="button">Edit Info</a>
+            <ul id="changes">
+                <li><a href="/editpersonal/{{user.id}}">Personal Info</a></li>
+                <li><a href="/editobjective/{{user.id}}">Objective & Skills</a></li>
+                <li><a href="/editexperience/{{user.id}}">Experience</a></li>
+                <li><a href="/editemployment/{{user.id}}">Employment</a></li>
+                <li><a href="/editeducation/{{user.id}}">Education</a></li>
+                <li><a href="/editadditional/{{user.id}}">Additional Info & Pic</a></li>
+            </ul>
         </div>
     </div>
 </body>
-
-</html>
