--- a/resume_proj/resume_app/static/css/objective.css
+++ b/resume_proj/resume_app/static/css/objective.css
@@ -1,3 +1,5 @@
+/* personalinfo css */
+
 #name p{
     display: flex;
     vertical-align: bottom;
@@ -9,4 +11,23 @@
 
 #submit{
     width: 150px;
+}
+
+/* objective and skills css */
+
+h2, .mb-3, p{
+    text-align: center;
+}
+
+.mb-3{
+    margin: 10px;
+}
+
+.form-label, p{
+    word-wrap: break-word;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#skill_list{
+    margin: 10px;
 }
