--- a/resume_proj/resume_app/templates/personalinfo.html
+++ b/resume_proj/resume_app/templates/personalinfo.html
@@ -19,7 +19,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Fill out Contact Info and Social Media</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/objective.css' %}">
     <script>
