update preview and template1 html

--- a/resume_proj/resume_app/static/css/eduaddl.css
+++ b/resume_proj/resume_app/static/css/eduaddl.css
@@ -26,6 +26,10 @@ span{
 
 /* additional css */
 
-#final_btm_btn{
-    width:fit-content;
+#submit{
+    width: 150px;
+}
+
+#img_file{
+    margin:auto;
 }
