--- a/resume_proj/resume_app/templates/template1.html
+++ b/resume_proj/resume_app/templates/template1.html
@@ -10,6 +10,8 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Resume Display</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/template1.css' %}">
     <script>
         $(document).ready(function () {
             $('.experience, .row, .employment, .additional').hide();
