--- a/resume_proj/resume_app/templates/logreg.html
+++ b/resume_proj/resume_app/templates/logreg.html
@@ -8,6 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        span{
+            font-size: small;
+        }
+    </style>
 </head>
 
 <body>
@@ -53,7 +58,7 @@
                     </div>
                     <div class="form-group row">
                         <label for="confirm_password" class="col-sm-4 col-form-label col-form-label-sm">Confirm
-                            Password</label>
+                            Password <span>(must be at least 8 characters)</span></label>
                         <div class="col-sm-8">
                             <input type="password" class="form-control form-control-sm" name="confirm_password">
                         </div>
