--- a/resume_proj/resume_app/templates/postlogin.html
+++ b/resume_proj/resume_app/templates/postlogin.html
@@ -54,6 +54,10 @@
     </nav><!-- /NAVBAR -->
     <br>
     <div class="wrapper">
+        <div id="new_button">
+            <a class="btn btn-primary" href="/newresume/{{user.id}}" role="button">Start Process</a>
+        </div>
+        <br>
         <div id="view_button">
             <a class="btn btn-primary" href="/templates" role="button">View Template</a>
         </div>
