--- a/resume_proj/resume_app/templates/logreg.html
+++ b/resume_proj/resume_app/templates/logreg.html
@@ -50,17 +50,17 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="password" class="col-sm-4 col-form-label col-form-label-sm">Password</label>
+                        <label for="password" class="col-sm-4 col-form-label col-form-label-sm">Password <span>(must be at least 8 characters)</span></label>
                         <div class="col-sm-8">
                             <input type="password" class="form-control form-control-sm" name="password">
                             </ul>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="confirm_password" class="col-sm-4 col-form-label col-form-label-sm">Confirm
-                            Password <span>(must be at least 8 characters)</span></label>
+                        <label for="pw_conf" class="col-sm-4 col-form-label col-form-label-sm">Confirm
+                            Password <span>(must match Password)</span></label>
                         <div class="col-sm-8">
-                            <input type="password" class="form-control form-control-sm" name="confirm_password">
+                            <input type="password" class="form-control form-control-sm" name="pw_conf">
                         </div>
                     </div>
                     <button type="submit">Register</button>
