--- a/resume_proj/resume_app/templates/postregister.html
+++ b/resume_proj/resume_app/templates/postregister.html
@@ -45,6 +45,7 @@
     <div class="container">
         <div class="center">
             <h1>Getting Started</h1>
+            <br>
             <p>You will be filling out 6 pages worth of resume information, including uploading a profile picture.</p>
             <p>Filling out a resume can be a daunting task so do yourself a favor and just get it done.</p>
             <p>This website is meant to give you a centralized location to store and update your resume. From here 
@@ -52,7 +53,7 @@
             <h3>Good luck!</h3>
             <br>
             <div id="obj_button">
-                <a href="/objective/{{user.id}}" role="button" class="btn btn-lg btn-info ml-2 text-white">Objective</a>
+                <a href="/personalinfo/{{user.id}}" role="button" class="btn btn-lg btn-info ml-2 text-white">Personal Info</a>
             </div>
         </div>
     </div>
