--- a/resume_proj/resume_app/templates/personalinfo.html
+++ b/resume_proj/resume_app/templates/personalinfo.html
@@ -56,6 +56,11 @@
         <form action="/contact" method="POST" id="contact">
         {% csrf_token %}
         <h2>Name</h2>
+        {% for message in messages %}
+        <ul>
+            <li>{{ message }}</li>
+        </ul>
+        {% endfor %}
         <div class="row">
             <div class="col">
                 <label for="first_name" class="form-label">First Name</label>
@@ -153,8 +158,8 @@
         <h2>Contact</h2>
         <div class="row">
             <div class="col">
-                <label for="phone" class="form-label">Phone</label>
-                <input type="tel" class="form-control" id="exampleFormControlInput1" name="phone">
+                <label for="phone_number" class="form-label">Phone</label>
+                <input type="tel" class="form-control" id="exampleFormControlInput1" name="phone_number">
             </div>
             <div class="col">
                 <label for="email" class="form-label">Email</label>
