add edit htmls and update views and urls

--- a/resume_proj/resume_app/templates/postlogin.html
+++ b/resume_proj/resume_app/templates/postlogin.html
@@ -65,8 +65,8 @@
         <div id="edit_button">
             <a class="btn btn-primary" id="edit_info" href="#" role="button">Edit Info</a>
             <ul id="changes">
-                <li><a href="/editpersonal/{{user.id}}">Personal Info</a></li>
-                <li><a href="/editobjective/{{user.id}}">Objective & Skills</a></li>
+                <li><a href="/editpersonalpage/{{user.id}}">Personal Info</a></li>
+                <li><a href="/editobjandskillpage/{{user.id}}">Objective & Skills</a></li>
                 <li><a href="/editexperience/{{user.id}}">Experience</a></li>
                 <li><a href="/editemployment/{{user.id}}">Employment</a></li>
                 <li><a href="/editeducation/{{user.id}}">Education</a></li>
