updated views and html, create template 1

--- a/resume_proj/resume_app/templates/postlogin.html
+++ b/resume_proj/resume_app/templates/postlogin.html
@@ -68,9 +68,9 @@
                 <li><a href="/editpersonalpage/{{user.id}}">Personal Info</a></li>
                 <li><a href="/editobjandskillpage/{{user.id}}">Objective & Skills</a></li>
                 <li><a href="/editexperiencepage/{{user.id}}">Experience</a></li>
-                <li><a href="/editemployment/{{user.id}}">Employment</a></li>
-                <li><a href="/editeducation/{{user.id}}">Education</a></li>
-                <li><a href="/editadditional/{{user.id}}">Additional Info & Pic</a></li>
+                <li><a href="/editemploymentpage/{{user.id}}">Employment</a></li>
+                <li><a href="/editeducationpage/{{user.id}}">Education</a></li>
+                <li><a href="/editadditionalpage/{{user.id}}">Additional Info & Pic</a></li>
             </ul>
         </div>
     </div>
