--- a/resume_proj/resume_app/templates/template1.html
+++ b/resume_proj/resume_app/templates/template1.html
@@ -42,28 +42,29 @@
             <!-- <h1>{{user.name}}</h1> -->
         </div>
         <div class="address1">
-            <p><a href=" http://maps.google.com/?q={{user.street}} {{user.city}} {{user.state}} {{user.zip}}" target="_blank">{{user.street}}</a></p>
+            <p><a href=" http://maps.google.com/?q={{contact.street}} {{contact.city}} {{contact.state}} {{contact.zip}}" target="_blank">{{user.street}}</a></p>
             <!-- <p><a href=" http://maps.google.com/?q={{user.street_address}}" target="_blank"> {{user.street_address}} </a></p> -->
         </div>
         <div class="address2">
-            <p> {{user.city}} {{user.state}} {{user.zip}}</p>
+            <p> {{contact.city}} {{contact.state}} {{contact.zip}}</p>
             <!-- {{user.city_state_zip}}</p> -->
         </div>
         <div class="phone">
-            <p>{{user.phone}}</p>
+            <p><span pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">{{contact.phone}}</span> </p>
             <!-- <p>{{phone}}</p> -->
         </div>
         <div class="nav_bar">
+            {% for social in socials %}
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://github.com/GaryAngarita"
+                    <a class="nav-link active" aria-current="page" href="{{social.site}}"
                         target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                             fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                             <path
                                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                         </svg></a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="https://www.linkedin.com/in/garythepilot/" target="_blank"><svg
                             xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                             class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -76,28 +77,26 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
+                </li> -->
             </ul>
+            {% endfor %}
         </div>
         <div class="intro">
             <h2>Objective:</h2>
-            <p>{{user.objective}}.</p>
+            <p>{{objective.content}}.</p>
                 <!-- <p>{{user.objective}}</p> -->
         </div>
         <h2>Skills:</h2>
         <div class="skills">
             <div class="skills1">
+                {% for skill in skills %}
                 <ul>
-                    <!-- {% for skill in skills %} -->
-                    <li>Technical Proficiency</li>
-                    <!-- <li>{{skill}}</li> -->
-                    <li>Personnel Management</li>
-                    <li>Training Management</li>
-                    <!-- {% endfor %} -->
+                    <li>{{skill.selected}}</li>                   
                 </ul>
+                {% endfor %}
         <!-- Repeat for as many skills as necessary -->
             </div>
-            <div class="skills1">
+            <!-- <div class="skills1">
                 <ul>
                     <li>Team-player</li>
                     <li>Problem-solver</li>
@@ -110,7 +109,7 @@
                     <li>Adaptability</li>
                     <li>Career driven</li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <h2 id="exp">Experience</h2>
         <div class="exp_block">
