need to fix database issues

--- a/resume_proj/resume_app/static/css/template1.css
+++ b/resume_proj/resume_app/static/css/template1.css
@@ -1,5 +1,5 @@
 #container{
-    background-image: url(FB_IMG_1507835697822~2.jpg);
+    background-image: url({{picture.img}});
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode:soft-light;
