--- a/resume_proj/resume_app/templates/personalinfo.html
+++ b/resume_proj/resume_app/templates/personalinfo.html
@@ -53,14 +53,14 @@
     <br>
     <br>
     <div class="container">
-        <form action="/contact" method="POST" id="contact">
-        {% csrf_token %}
-        <h2>Name</h2>
         {% for message in messages %}
         <ul>
             <li>{{ message }}</li>
         </ul>
         {% endfor %}
+        <form action="/contact" method="POST" id="contact">
+        {% csrf_token %}
+        <h2>Name</h2>
         <div class="row">
             <div class="col">
                 <label for="first_name" class="form-label">First Name</label>
@@ -158,7 +158,7 @@
         <h2>Contact</h2>
         <div class="row">
             <div class="col">
-                <label for="phone_number" class="form-label">Phone</label>
+                <label for="phone_number" class="form-label">Phone <span class="phone">(no dashes)</span></label>
                 <input type="tel" class="form-control" id="exampleFormControlInput1" name="phone_number">
             </div>
             <div class="col">
@@ -193,7 +193,7 @@
         </div>
         <br>
         <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-            <button class="btn btn-primary" id="submit" type="button">Next page - Objective</button>
+            <button class="btn btn-primary" id="submit" type="submit">Next page - Objective</button>
         </div>
         </form>
     </div>
